--- a/docker/run/Dockerfile
+++ b/docker/run/Dockerfile
@@ -1,12 +1,8 @@
-FROM alpine:3.7
+FROM selenium/node-chrome
 
-RUN echo http://dl-cdn.alpinelinux.org/alpine/edge/testing >> /etc/apk/repositories
+USER root
 
-RUN apk --update add firefox git openssh-client openssl-dev
-
-RUN wget https://github.com/mozilla/geckodriver/releases/download/v0.19.1/geckodriver-v0.19.1-linux64.tar.gz -O - | tar xzC /usr/local/bin
-
-ENV MOZ_HEADLESS=1
+RUN apt-get update && apt-get install -y git libssl-dev
 
 COPY fco-backup-fetcher /fco-backup-fetcher
 
