--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ env_logger = "^0.4"
 futures = "0.1.17"
 log = "0.3"
 reqwest = "0.8.3"
+serde = "1"
+serde_json = "1"
 sxd-document = "0.2.6"
 sxd-xpath = "0.4.1"
 tokio-core = "0.1.12"
