--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ chrono = "0.4"
 env_logger = "^0.4"
 futures = "0.1.17"
 log = "0.3"
-reqwest = "0.8.3"
+reqwest = { version = "0.10", default-features = false, features = ["blocking", "rustls-tls"] }
 serde = "1"
 serde_json = "1"
 sxd-document = "0.3"
