Remove openssl from docker container
No longer needed now that we use rustls

--- a/docker/run/Dockerfile
+++ b/docker/run/Dockerfile
@@ -2,7 +2,7 @@ FROM selenium/node-chrome
 
 USER root
 
-RUN apt-get update && apt-get install -y git libssl-dev
+RUN apt-get update && apt-get install -y git
 
 COPY fco-backup-fetcher /fco-backup-fetcher
 
